--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,5 +25,5 @@ jobs:
           go-version-file: go.mod
           cache-dependency-path: go.sum
 
-      - run: make bin/mk_funcs.so && file bin/mk_funcs.so
+      - run: make bin/mk_funcs.so
       - run: make test
