Defines separate build configurations
Configures separate build configurations in `.goreleaser.yaml`
to allow building `devctl` and `mk_funcs` with distinct settings.

This change enhances the build process, providing flexibility for
building different components of the project.

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -7,14 +7,16 @@ before:
     - make tidy
 
 builds:
-  - env:
+  - id: devctl
+    env:
       - CGO_ENABLED=0
     goos:
       - linux
       - windows
       - darwin
 
-  - goos:
+  - id: mk_funcs
+    goos:
       - linux
       - darwin
     main: ./pkg/make/mk_funcs
