Adds ARM64 architecture support
Adds ARM64 architecture support to the build process for both standard binaries and C-shared libraries.
This allows the application to run on ARM64-based systems.

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -14,15 +14,21 @@ builds:
       - linux
       - windows
       - darwin
+    goarch:
+      - amd64
+      - arm64
 
   - id: mk_funcs
     env:
       - CGO_ENABLED=1
+    main: ./pkg/make/mk_funcs
+    buildmode: c-shared
     goos:
       - linux
       - darwin
-    main: ./pkg/make/mk_funcs
-    buildmode: c-shared
+    goarch:
+      - amd64
+      - arm64
 
 archives:
   - formats: [tar.gz]
