Just linux then dammit

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -23,6 +23,8 @@ builds:
       - CGO_ENABLED=1
     main: ./pkg/make/mk_funcs
     buildmode: c-shared
+    goos: [linux]
+    goarch: [amd64]
 
 archives:
   - formats: [tar.gz]
