Updates CI workflows to run on 'thecluster'
Modifies both build and release workflows to use a custom runner
'instead of 'ubuntu-latest' to leverage tailored infrastructure.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     name: Build and Test
-    runs-on: ubuntu-latest
+    runs-on: thecluster
     steps:
       - uses: actions/checkout@v4
 
